# nfx-containers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_FastHashMap.cpp  BM_FastHashSet.cpp  BM_PerfectHashMap.cpp  BM_TransparentHashMap.cpp  BM_TransparentHashSet.cpp  CMakeLists.txt  README.md
cmake/: nfx-containers-config.cmake.in  nfxContainersBuildConfig.cmake  nfxContainersDependencies.cmake  nfxContainersInstall.cmake  nfxContainersPackaging.cmake  nfxContainersTarget.cmake
doc/: CMakeLists.txt
include/nfx/: Containers.h
include/nfx/containers/: FastHashMap.h  FastHashSet.h  PerfectHashMap.h  TransparentHashMap.h  TransparentHashSet.h
include/nfx/detail/containers/: CompilerSupport.h  FastHashMap.inl  FastHashSet.inl  PerfectHashMap.inl
samples/: CMakeLists.txt  Sample_FastHashMap.cpp  Sample_FastHashSet.cpp  Sample_PerfectHashMap.cpp  Sample_TransparentHashMap.cpp  Sample_TransparentHashSet.cpp
test/: CMakeLists.txt  TESTS_FastHashMap.cpp  TESTS_FastHashSet.cpp  TESTS_PerfectHashMap.cpp  TESTS_TransparentHashMap.cpp  TESTS_TransparentHashSet.cpp
